--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,64 +1,60 @@
 @tailwind base;
+
+@layer base {
+  :root {
+    color-scheme: light;
+    --theme-bg: #fafafa;
+    --theme-link: #567c77;
+    --theme-text: #22272a;
+    --theme-accent: #cc2a42;
+    --theme-accent-2: #111;
+    --theme-quote: #cc2a42;
+    --theme-menu-bg: rgb(250 250 250 / 0.85);
+  }
+
+  :root.dark {
+    color-scheme: dark;
+    --theme-bg: #1d1f21;
+    --theme-link: lightgreen;
+    --theme-text: #c9cacc;
+    --theme-accent: #2bbc89;
+    --theme-accent-2: #eee;
+    --theme-quote: #ccffb6;
+    --theme-menu-bg: rgb(29 31 33 / 0.85);
+  }
+
+  html {
+    @apply h-full scroll-smooth;
+  }
+
+  html body {
+    @apply mx-auto flex h-full max-w-3xl flex-col bg-bgColor px-8 pt-16 font-mono text-sm font-normal text-textColor antialiased;
+  }
+}
+
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  color-scheme: dark;
-}
-
-body {
-  @apply bg-zinc-900 text-zinc-100;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-pre {
-  @apply !px-0 rounded-lg;
-}
-
 code {
-  @apply !text-sm md:!text-base !leading-loose md:!leading-loose;
-}
-
-pre > code {
-  @apply grid;
   counter-reset: line;
 }
 
-.prose {
-  @apply max-w-[55rem] sm:text-lg md:text-xl !leading-7 sm:!leading-9;
+code > [data-line]::before {
+  counter-increment: line;
+  content: counter(line);
+
+  /* Other styling */
+  display: inline-block;
+  width: 1rem;
+  margin-right: 2rem;
+  text-align: right;
+  color: gray;
 }
 
-[data-line] {
-  @apply px-6 border-l-2 border-l-transparent;
+code[data-line-numbers-max-digits='2'] > [data-line]::before {
+  width: 2rem;
 }
 
-[data-highlighted-line] {
-  background: rgba(200, 200, 255, 0.1);
-  @apply border-l-blue-400;
-}
-
-[data-highlighted-chars] {
-  @apply bg-zinc-600/50 rounded;
-  box-shadow: 0 0 0 4px rgb(82 82 91 / 0.5);
-}
-
-[data-chars-id] {
-  @apply shadow-none p-1 border-b-2;
-}
-
-[data-chars-id] span {
-  @apply !text-inherit;
-}
-
-[data-chars-id='v'] {
-  @apply !text-pink-300 bg-rose-800/50 border-b-pink-600 font-bold;
-}
-
-[data-chars-id='s'] {
-  @apply !text-yellow-300 bg-yellow-800/50 border-b-yellow-600 font-bold;
-}
-
-[data-chars-id='i'] {
-  @apply !text-purple-200 bg-purple-800/50 border-b-purple-600 font-bold;
+code[data-line-numbers-max-digits='3'] > [data-line]::before {
+  width: 3rem;
 }
